fixed x overflow

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 	overflow-x: none;
 }
 .navigation {
-	width: 100vw;
+	width: 100%;
 	height: 65px;
 	background-color: #ebda40;
 	display: flex;
@@ -42,7 +42,7 @@
 }
 
 .hero1 {
-	width: 100vw;
+	width: 100%;
 	height: 368px;
 	background-color: #f3f3f3;
 	display: flex;
@@ -100,7 +100,7 @@
 }
 
 .hero2 {
-	width: 100vw;
+	width: 100%;
 	height: 389px;
 	display: flex;
 	justify-content: space-around;
@@ -157,7 +157,7 @@
 
 .callSection {
 	padding-top: 80px;
-	width: 100vw;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -204,7 +204,7 @@
 }
 
 .leadMagnet {
-	width: 100vw;
+	width: 100%;
 	height: 389px;
 	display: flex;
 	flex-direction: column;
